--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div id="section1">
 		<video id="video" width="800" controls="controls">
-			<source src="video/计算机科学社.mp4" type="video/mp4">
+			<source src="video/计算机科学社2.mp4" type="video/mp4">
 		</video>
 	    <div id="text">
 		   	<h1>Computer Science Club</h1>
